# galvyn-template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  deny.toml  docker-compose-dev.yml  docker-compose.yml  galvyn.env.template  post-script.rhai  post-script.sh  tools.py
data/conf/nginx/: nginx.conf
data/conf/nginx-dev/: nginx.conf
frontend/: .gitignore  eslint.config.js  index.html  openapi.json  package-lock.json  package.json
frontend/scripts/: gen-api.sh  run-ci.sh
frontend/src/: i18n.ts  routeTree.gen.ts
frontend/src/api/: api.tsx
frontend/src/context/: error-context.tsx
frontend/src/routes/: __root.tsx
frontend/src/utils/: error.ts  keyboard-handler.ts  state.ts  tabs.ts
webserver/: Cargo.toml
webserver/migrations/: 0001_initial.toml
webserver/src/: config.rs  main.rs
webserver/src/http/: mod.rs
webserver/src/http/handler_frontend/: mod.rs
webserver/src/http/middlewares/: mod.rs
webserver/src/models/: mod.rs
webserver/src/modules/: mod.rs
webserver/src/modules/settings/: mod.rs
